2000-01-04  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwv.c: 
	* ntpd/refclock_chu.c: 
	* libntp/icom.c: 
	* libntp/Makefile.am: 
	* include/icom.h: 
	* html/driver7.htm: 
	* html/driver36.htm: 
	Support for ICOM.  The WWV/H driver, by the way, is getting truly
	awesome.  The CHU autotune function works okay as it is.  I'd like
	to find somebody else to test the audio drivers just to make sure
	I haven't done something stupid.  There is a new define ICOM
	intended for the driver autotune function; however, I crafted the
	thing in much the same way as the refclock_atom.c thing - it tries
	to open /dev/icom and, if that fails, goes quietly to sleep.
	From: Dave Mills <mills@udel.edu>

2000-01-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_oncore.c (oncore_read_config): Patches and cleanup
	From: Poul-Henning Kamp <phk@critter.freebsd.dk>
	more isascii() stuff from HMS.

	* ntpd/refclock_fg.c (fg_receive): Cast.
	From: Tom Smith <smith@cag.lkg.dec.com>

	* ntpd/map_vme.c (map_vme): tx.access_result indicates failure on
	< 0, not <= 0.  A fix that apparently did not get brought over
	from the ntp3 base.
	From: Michael Barone <michael.barone@lmco.com>

	* configure.in: Move the ONCORE_SHMEM_STATUS check and definition
	here.

	* ntpd/refclock_oncore.c (oncore_init_shmem): Some systems do not
	have MAP_HASSEMAPHORE.

	* ntpd/refclock_oncore.c: Drive ONCORE_SHMEM_STATUS based on
	HAVE_SYS_MMAN_H .  If this needs finer checks, do it in
	configure.in .
	(oncore_read_config): Add the isascii() checks; older versions of
	Unix don't guarantee correct behavior of is*() without it.

	* ntpd/refclock_oncore.c: Add proof-of-concept support for 
	  delivering receiver data stream to other processes through
	  a memory-mapped file.
	  From: Poul-Henning Kamp <phk@FreeBSD.org>

2000-01-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ac_refclock_chu): Provide the CHU driver by
	default, and by default prefer the AUDIO version.  We used to